# Web_Scraping

./: pyproject.toml
shop_crawling/: scrapy.cfg  shop_list.json
shop_crawling/shop_crawling/: items.py  middlewares.py  pipelines.py  settings.py
shop_crawling/shop_crawling/spiders/: shop_crawling.py
spider/: test.ipynb
