[tool.poetry]
name = "web-scraping"
version = "0.1.0"
description = "poetry for webscraping"
authors = ["kzyoshida <kazunari.yoshida.ks@gmail.com>"]
readme = "README.md"
packages = [{include = "web_scraping"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
